2026-02-10T02:12:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21848925735 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 263 297
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-23 2026-01-24] / [2026-02-07]

2026-02-07T01:51:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772092356 # 870
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-22] / []

2026-02-06T01:54:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21735776713 # 869
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-06
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-21] / []

2026-02-05T02:33:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21696529461 # 868